Components package: fix component placeholder alignment
Resolve the styling issue that were present in Gutenberg integrations
that rely on published npm packages. Outside of wp-admin context the
removed CSS line was causing the placeholder to appear misaligned.

--- a/packages/components/src/placeholder/style.scss
+++ b/packages/components/src/placeholder/style.scss
@@ -3,7 +3,6 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	padding: 1em;
 	min-height: 200px;
 	width: 100%;
 	text-align: center;
